[gd_scene load_steps=32 format=3 uid="uid://bnrg2y6yyfgwu"]

[ext_resource type="Script" path="res://scripts/CanvasLayer.gd" id="1_0kysu"]
[ext_resource type="Texture2D" uid="uid://blut7necsub18" path="res://textures/texture_dirt.png" id="1_003ta"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_t7p44"]
[ext_resource type="Script" path="res://scripts/selector.gd" id="3_fusd2"]
[ext_resource type="Shader" path="res://scripts/pixelate.gdshader" id="4_gq05i"]
[ext_resource type="Texture2D" uid="uid://pc3vfmlr4kby" path="res://textures/ui_box_1.png" id="5_30qmg"]
[ext_resource type="Texture2D" uid="uid://iipwv1ct8fvg" path="res://textures/crosshair_5.png" id="5_qg2yq"]
[ext_resource type="Texture2D" uid="uid://010whyf4v7vf" path="res://textures/texture_bam.png" id="9_7maj3"]
[ext_resource type="Material" uid="uid://chmlyrvdqmhso" path="res://textures/texture_gold.tres" id="9_k241y"]
[ext_resource type="ArrayMesh" uid="uid://ckh65bh0c1tx0" path="res://objects/sword.obj" id="9_xkax0"]
[ext_resource type="LabelSettings" uid="uid://cprcxoi0bhijf" path="res://textures/font_settings_1.tres" id="10_op6uk"]
[ext_resource type="AudioStream" uid="uid://orwhn1lqoj6a" path="res://sounds/sfx_jump_2.wav" id="11_38ekj"]
[ext_resource type="Texture2D" uid="uid://mgiqjbg8jet6" path="res://textures/texture_cobble.jpg" id="11_83b4l"]
[ext_resource type="AudioStream" uid="uid://cy8mx5k2ii6qq" path="res://sounds/sfx_dash.wav" id="12_i1p3u"]
[ext_resource type="AudioStream" uid="uid://b703tjmdj4e3" path="res://sounds/sfx_slide.wav" id="13_x3jmf"]
[ext_resource type="Script" path="res://scripts/ouch_sprite.gd" id="14_280dd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0aek6"]
radius = 0.6
height = 4.159

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mujcg"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_napr1"]
points = PackedVector3Array(0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_6wqar"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xirh0"]
albedo_texture = ExtResource("11_83b4l")

[sub_resource type="CylinderMesh" id="CylinderMesh_x6wlm"]
top_radius = 1.842

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mu1c1"]
render_priority = 1
no_depth_test = true
albedo_texture = ExtResource("1_003ta")

[sub_resource type="QuadMesh" id="QuadMesh_0ju1v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qsxh0"]
render_priority = -2
shader = ExtResource("4_gq05i")

[sub_resource type="GDScript" id="GDScript_ojkxx"]
script/source = "extends Node3D

#respawns player when \"r\" is pressed, could add death respawns here

@onready var player = $\"..\"



# Called when the node enters the scene tree for the first time.
func _ready():
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	if Input.is_action_pressed(\"respawn\"):
		
		player.position.x = 5
		player.position.y = 170
		player.position.z = 5
	
"

[sub_resource type="LabelSettings" id="LabelSettings_wtiho"]
font_size = 25
font_color = Color(0.635294, 0.635294, 0.635294, 1)
outline_size = 20
outline_color = Color(0.258824, 0.258824, 0.258824, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hvgyn"]
font_size = 28
font_color = Color(0.2, 0.12549, 0.2, 1)
shadow_size = 10
shadow_color = Color(0.435294, 0.443137, 0.419608, 0.717647)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8qxhv"]
emission_shape = 1
emission_sphere_radius = 1.0
spread = 132.57
scale_min = 0.1
scale_max = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_4giuh"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="SphereShape3D" id="SphereShape3D_dq1ol"]
radius = 3.575

[node name="player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.96217, 0)
collision_layer = 3
collision_mask = 3
floor_block_on_wall = false
floor_max_angle = 1.16064
script = ExtResource("1_t7p44")

[node name="body" type="CollisionShape3D" parent="."]
transform = Transform3D(0.42, 0, 0, 0, 0.42, 0, 0, 0, 0.42, 0, 0.181757, 0.449688)
shape = SubResource("CapsuleShape3D_0aek6")

[node name="body_mesh" type="MeshInstance3D" parent="body"]
transform = Transform3D(1.08, 0, 0, 0, 1.08, 0, 0, 0, 1.08, -0.021, 0.0470001, -0.026)
layers = 0
transparency = 0.54
gi_mode = 0
visibility_range_begin = 2.5
mesh = SubResource("CapsuleMesh_mujcg")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.481444, 0.422331)

[node name="flash_light" type="SpotLight3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0038507, 1.06122)
light_color = Color(1, 1, 0.901961, 1)
light_energy = 0.881
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
shadow_blur = 6.233
distance_fade_begin = 46.55
distance_fade_shadow = 65.7
distance_fade_length = 457.03
spot_range = 658.252
spot_attenuation = 2.2974
spot_angle = 25.0
spot_angle_attenuation = 0.933035

[node name="selector" type="RayCast3D" parent="head"]
transform = Transform3D(0.975, 0, 0, 0, -0.0107204, -0.974941, 0, 0.974941, -0.0107204, 0, 0.0122943, 0.0136931)
target_position = Vector3(0, -4.33, 0)
collide_with_bodies = false
debug_shape_thickness = 3
script = ExtResource("3_fusd2")

[node name="crosshair" type="Sprite3D" parent="head/selector"]
transform = Transform3D(1.395, 0, 0, 0, -0.0367602, -1.39452, 0, 1.39452, -0.0367602, 0.002, -5.60339, 0.0216947)
cast_shadow = 0
offset = Vector2(-0.505, -1.61)
no_depth_test = true
render_priority = 2
texture = ExtResource("5_qg2yq")

[node name="r_arm" type="Node3D" parent="head"]
transform = Transform3D(0.977731, 0.162616, 0.132654, -0.164066, 0.986449, 0, -0.130857, -0.0217641, 0.991162, 0.191688, 0.11195, 0.602481)

[node name="r_pistol" type="CollisionShape3D" parent="head/r_arm"]
transform = Transform3D(0.128953, -0.0119655, 0.0515632, 0.0144212, 0.0355696, -0.546211, 0.00794311, 0.129679, 0.154578, 1.00732, -0.444874, -0.0421016)
shape = SubResource("ConvexPolygonShape3D_napr1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/r_arm/r_pistol"]
transform = Transform3D(1, -1.76951e-08, -5.96046e-08, 1.30385e-08, 1, 0, -1.86265e-09, -9.31323e-10, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_6wqar")
skeleton = NodePath("../../../l_arm")
surface_material_override/0 = SubResource("StandardMaterial3D_xirh0")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="head/r_arm/r_pistol"]
transform = Transform3D(0.80556, -0.0520355, 0.149552, 0.0562109, 0.595964, -2.11341, 0.00129782, 0.232125, 0.306113, 0.0911682, -1.09344, 0.353138)
mesh = SubResource("BoxMesh_6wqar")
skeleton = NodePath("../../../l_arm")
surface_material_override/0 = SubResource("StandardMaterial3D_xirh0")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="head/r_arm/r_pistol"]
transform = Transform3D(0.346084, 0.0130269, -0.0225181, -0.00317478, -0.0563295, -1.99412, -0.00139813, 0.174905, -0.0359376, -0.0165186, -0.639703, -0.262502)
mesh = SubResource("BoxMesh_6wqar")
skeleton = NodePath("../../../l_arm")
surface_material_override/0 = SubResource("StandardMaterial3D_xirh0")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="head/r_arm/r_pistol"]
transform = Transform3D(0.115353, 0.00318927, -0.00468099, -0.00105119, -0.0112461, -0.406214, -0.000566037, 0.0349789, -0.00730384, -0.00664616, 0.643886, -0.426626)
mesh = SubResource("BoxMesh_6wqar")
skeleton = NodePath("../../../l_arm")
surface_material_override/0 = SubResource("StandardMaterial3D_xirh0")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="head/r_arm/r_pistol"]
transform = Transform3D(0.114434, 0.000710968, 0.0541698, 0.013296, -0.0578475, -0.371883, 0.00120465, 0.0323018, -0.0374198, 0.0491867, -0.641343, 0.0368596)
mesh = SubResource("BoxMesh_6wqar")
skeleton = NodePath("../../../l_arm")
surface_material_override/0 = SubResource("StandardMaterial3D_xirh0")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="head/r_arm/r_pistol"]
transform = Transform3D(0.0949994, 0.000244342, -3.25963e-09, 5.81611e-07, -0.000122145, 0.0769999, 0.000331612, -0.0699995, -0.000134397, 0.0393009, -0.00403655, -0.51919)
mesh = SubResource("CylinderMesh_x6wlm")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_xirh0")

[node name="r_bam" type="Sprite3D" parent="head/r_arm/r_pistol"]
transform = Transform3D(1, -2.98023e-08, -1.07288e-06, -2.5332e-07, 1, 4.64916e-06, 4.79631e-08, 2.23517e-08, 1, 0.253407, -0.414765, -1.17805)
visible = false
sorting_offset = -3.0
modulate = Color(1, 1, 1, 0.105882)
pixel_size = 0.034
billboard = 1
double_sided = false
texture = ExtResource("9_7maj3")

[node name="l_arm" type="Node3D" parent="head"]
transform = Transform3D(0.980944, -0.123505, -0.149984, 0.124918, 0.992167, 0, 0.148809, -0.0187356, 0.988688, 0.150362, 0.0154607, 0.184147)

[node name="l_pickaxe" type="CollisionShape3D" parent="head/l_arm"]
transform = Transform3D(0.997357, -0.0721771, 0.00840791, 0.0721081, 0.997364, 0.00825469, -0.00898106, -0.00762675, 0.999931, -2.01229, -0.210437, -1.43313)

[node name="l_pickaxe_mesh" type="MeshInstance3D" parent="head/l_arm/l_pickaxe"]
transform = Transform3D(-0.0239667, -0.075814, -0.00882404, -0.0250756, 0.0165564, -0.0741424, 0.0720892, -0.0194461, -0.0287236, 1.33574, -0.102214, 2.07185)
sorting_offset = -5.0
material_override = ExtResource("9_k241y")
mesh = ExtResource("9_xkax0")
surface_material_override/0 = SubResource("StandardMaterial3D_mu1c1")

[node name="SpringArm3D" type="SpringArm3D" parent="head"]
transform = Transform3D(1, 1.0943e-08, 1.49012e-08, 3.37604e-09, 1, -9.31323e-10, 0, 9.31323e-10, 1, -2.38419e-07, 0.0338891, 0.816836)
collision_mask = 3
spring_length = 0.5
margin = 0.5

[node name="Pixelator" type="MeshInstance3D" parent="head/SpringArm3D"]
transform = Transform3D(2.805, -4.01649e-08, -4.17979e-08, -8.88178e-16, 2.805, 0, 8.27181e-25, 0, 2.805, 1.88423e-08, -0.00919092, -1.28236)
visible = false
cast_shadow = 0
mesh = SubResource("QuadMesh_0ju1v")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_qsxh0")

[node name="Camera3D" type="Camera3D" parent="head/SpringArm3D"]
transform = Transform3D(1, -1.0943e-08, -1.49012e-08, -3.37604e-09, 1, 9.31323e-10, 3.14418e-18, -9.31323e-10, 1, 2.50981e-07, -0.0338891, -0.818102)

[node name="spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.363834, 0.402478)
visible = false
script = SubResource("GDScript_ojkxx")

[node name="player_gui" type="CanvasLayer" parent="."]
follow_viewport_enabled = true
script = ExtResource("1_0kysu")

[node name="ui_interact" type="BoxContainer" parent="player_gui"]
layout_direction = 1
anchors_preset = -1
anchor_left = 0.487
anchor_top = 0.593
anchor_right = 0.507
anchor_bottom = 0.632
offset_left = 14.976
offset_top = 27.7359
offset_right = 35.936
offset_bottom = 49.464
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.52, 0.546829)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="L_interact" type="Label" parent="player_gui/ui_interact"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "X"
label_settings = SubResource("LabelSettings_wtiho")
horizontal_alignment = 1
vertical_alignment = 1

[node name="R_interact" type="Label" parent="player_gui/ui_interact"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "X"
label_settings = SubResource("LabelSettings_wtiho")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ui_r_equip" type="BoxContainer" parent="player_gui"]
anchors_preset = -1
anchor_left = 0.569
anchor_top = 0.873
anchor_right = 0.613
anchor_bottom = 0.951
offset_left = -51.488
offset_top = 0.295959
offset_right = -27.176
offset_bottom = 27.752
scale = Vector2(0.65, 0.65)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="R_equip_ui" type="Sprite2D" parent="player_gui/ui_r_equip"]
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(6.15381, 40)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_30qmg")

[node name="R_equip" type="Label" parent="player_gui/ui_r_equip"]
layout_mode = 2
text = "R"
label_settings = ExtResource("10_op6uk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ui_l_equip" type="BoxContainer" parent="player_gui"]
anchors_preset = -1
anchor_left = 0.461
anchor_top = 0.844
anchor_right = 0.523
anchor_bottom = 0.963
offset_left = 3.9281
offset_top = 19.088
offset_right = 16.5042
offset_bottom = 20.976
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.65, 0.65)
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="L_equip_ui" type="Sprite2D" parent="player_gui/ui_l_equip"]
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(4.61523, 40)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_30qmg")

[node name="L_equip" type="Label" parent="player_gui/ui_l_equip"]
layout_mode = 2
text = "L"
label_settings = ExtResource("10_op6uk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ui_stats" type="BoxContainer" parent="player_gui"]
anchors_preset = -1
anchor_left = 0.396
anchor_top = 0.971
anchor_right = 0.641
anchor_bottom = 0.989
offset_left = -165.192
offset_top = -3.20795
offset_right = 956.568
offset_bottom = -2.87189
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.402861, 0.97801)
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="stamina" type="ProgressBar" parent="player_gui/ui_stats"]
modulate = Color(0.831373, 0.709804, 0.231373, 1)
self_modulate = Color(0.658824, 0.576471, 0.223529, 1)
custom_minimum_size = Vector2(700, 12)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="health" type="ProgressBar" parent="player_gui/ui_stats"]
modulate = Color(0.843137, 0.286275, 0.498039, 1)
self_modulate = Color(0.909804, 0.337255, 0.603922, 1)
custom_minimum_size = Vector2(700, 12)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="ui_inventory" type="BoxContainer" parent="player_gui"]
offset_right = 40.0
offset_bottom = 40.0

[node name="stone" type="Label" parent="player_gui/ui_inventory"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "stone"
label_settings = SubResource("LabelSettings_hvgyn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="pistol_loaded" type="Label" parent="player_gui/ui_inventory"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "loaded"
label_settings = SubResource("LabelSettings_hvgyn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="pistol_reserve" type="Label" parent="player_gui/ui_inventory"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "/reserve"
label_settings = SubResource("LabelSettings_hvgyn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ui_screen" type="BoxContainer" parent="player_gui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="ouch" type="ColorRect" parent="player_gui/ui_screen"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.94902, 0.172549, 0.533333, 0.156863)
script = ExtResource("14_280dd")

[node name="audio_stream_land" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.363834, 0)
visible = false

[node name="audio_stream_jump" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.363834, 0)
visible = false
stream = ExtResource("11_38ekj")
volume_db = -13.634
max_db = 2.885
attenuation_filter_db = -21.5

[node name="audio_stream_dash" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.363834, 0)
visible = false
stream = ExtResource("12_i1p3u")
volume_db = -13.634
max_db = 2.885
attenuation_filter_db = -21.5

[node name="audio_stream_slide" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.363834, 0)
visible = false
stream = ExtResource("13_x3jmf")
volume_db = -13.634
max_db = 2.885
attenuation_filter_db = -21.5

[node name="enemy_aim" type="Node3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.0697679, 0.360711, 1.09991)

[node name="rain" type="GPUParticles3D" parent="."]
transform = Transform3D(1.88, 0, 0, 0, 1.88, 0, 0, 0, 1.88, 0.0542334, 1.01581, -1.23598)
visible = false
amount = 100
visibility_aabb = AABB(-4, -4, -4.99768, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_8qxhv")
draw_pass_1 = SubResource("BoxMesh_4giuh")

[node name="bullet_time_area" type="Area3D" parent="."]

[node name="bullet_time_collision" type="CollisionShape3D" parent="bullet_time_area"]
shape = SubResource("SphereShape3D_dq1ol")

[node name="hitbox_area" type="Area3D" parent="."]

[node name="hitbox_collision" type="CollisionShape3D" parent="hitbox_area"]
transform = Transform3D(0.42, 0, 0, 0, 0.42, 0, 0, 0, 0.42, 0, 0.181757, 0.449688)
shape = SubResource("CapsuleShape3D_0aek6")

[node name="RELOAD" type="Label3D" parent="."]
transform = Transform3D(0.87717, 0.27021, 0.396936, -0.292218, 0.956338, -0.00525969, -0.381026, -0.111378, 0.917831, -0.731483, 1.10958, -1.52955)
billboard = 2
no_depth_test = true
text = "RELOAD!"
font_size = 14
uppercase = true
